@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.bonitasoft.studio</groupId>
         <artifactId>studio</artifactId>
-        <version>9.0.10-SNAPSHOT</version>
+        <version>10.0.7-SNAPSHOT</version>
     </parent>
 
     <groupId>org.bonitasoft.studio.tests</groupId>
@@ -14,6 +14,7 @@
 
     <properties>
         <test.workspace.dir>${user.home}/lé test</test.workspace.dir>
+        <jvm.modules.arg>--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED</jvm.modules.arg>
     </properties>
 
     <modules>
